Changelog
=========

1.2-dev - (unreleased)
----------------------
 * Cleanup: of most pylint violations [ichimdav #4140]
 * Cleanup: of pyflakes warnings [ichimdav #4141]
 * Bug fix: Remove geotags suggestion duplicates [voineali #3357]
 * Change: Moved alchemy auto-discover code to eea.alchemy
     as it's not only about geotags, it will also discover
     temporal coverage and keywords [voineali #3357]

1.1 - (2010-12-13)
------------------
 * Bug fix: Fixed jslint warnings [voineali #3821]
 * Bug fix: Fixed doc tests [voineali #3821]

1.0 - (2010-10-12)
------------------
* Initial release
